# oci-python-scripts-grok

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  retain.txt  test.csv
src/: oci-parallel-paginated.py  oci-parallel-search.py  oci-simple.py  oci-tkinter-display.py  oci_la_extract.py  utils.py
src/oci_python_scripts_grok/scripts/: oci-parallel-execution.py  oci-parallel-search.py  oci-simple.py  oci-tkinter-display.py  oci_logging_analytics_export.py  oci_threaded_execution.py  script1.py  script2.py
src/oci_python_scripts_grok/templates/: base.py
tests/: test_script1.py  test_script2.py
