[project]
name = "oci-python-scripts-grok"
version = "0.1.0"
description = "A Python project with OCI, Tkinter, tksheet, argparse, and multiple scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "oci>=2.135.0",
    "tksheet>=7.2.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"